--- a/event_list/templates/index.html
+++ b/event_list/templates/index.html
@@ -16,7 +16,7 @@
     https://qiita.com/Haruka-Ogawa/items/997401a2edcd20e61037 -->
     <!-- https://www.itti.jp/web-design/how-to-display-a-map-using-google-map-api/ -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCleE-Z2qlfSDbIJWFRKA8susZPY44Vv3o&callback=initMap" async></script>
-    <script>
+    <!-- <script>
       function initMap() {
         var mapPosition = new google.maps.LatLng( 1,1 );//緯度経度
         var map = new google.maps.Map(document.getElementById('gmap'), {
@@ -28,13 +28,231 @@
         map: map
         });
       }
-    </script>
+    </script> -->
+    <!-- Google map 実装
+    参考資料
+    https://www.tam-tam.co.jp/tipsnote/javascript/post7755.html -->
+    <script>
+    //     let dataList = [
+    //     {
+    //         name: 'Cherrywood Neighborhood: Canvass for Julie!',
+    //         lat: 30.2935421,
+    //         lng: -97.716,
+    //     }, {
+    //             name: 'Cleburne: Block-walk for Julie!',
+    //             lat: 32.4652204,
+    //             lng: -97.4273195
+    //     }, {
+    //             name: "Canvass for Julie at the Women's March!",
+    //             lat: 30.2603535,
+    //             lng: -97.7145152
+    //     }, {
+    //             name: 'Burleson: Block-walk for Julie!',
+    //             lat: 32.5297156,
+    //             lng: -97.286868
+    //     }, {
+    //             name: 'Cleburne Canvass!',
+    //             lat: 32.3476438,
+    //             lng: -97.3866837
+    //     }, {
+    //             name: 'Akron / Ephrata: Meet Jess King',
+    //             lat: 40.1730632,
+    //             lng: -76.1959315
+    //     }, {
+    //             name: 'Manheim Township: Meet Jess King',
+    //             lat: 40.0588134,
+    //             lng: -76.2898618
+    //     }, {
+    //             name: 'Lancaster City: Meet Jess King',
+    //             lat: 40.0380781,
+    //             lng: -76.3104021
+    //     }, {
+    //             name: 'Hempfield: Meet Jess King',
+    //             lat: 40.0425966,
+    //             lng: -76.426616
+    //     }, {
+    //             name: 'Allegheny Get Out the Vote Canvass for Conor Lamb',
+    //             lat: 40.4032685,
+    //             lng: -80.0911561
+    //     }, {
+    //             name: 'Moon Get Out the Vote Canvass for Conor Lamb',
+    //             lat: 40.4032685,
+    //             lng: -80.0911561
+    //     }, {
+    //             name: 'Pleasant Hills Get Out the Vote Canvass for Conor Lamb',
+    //             lat: 40.3224731,
+    //             lng: -79.9598792
+    //     }, {
+    //             name: 'Greene County Get Out the Vote Canvass for Conor Lamb',
+    //             lat: 39.8965726,
+    //             lng: -80.1846561
+    //     },
+    //     ]
 
+    //     // console.log(dataList)
+        
+
+    // // resultListというリストを定義したうえで    
+    // var resultList = []
+    // // dataListをfor文でまわし
+    // for (let i = 1; i < dataList.length; i++){
+    //   // resultListに格納
+    //   // 追加したい場所.push(追加したいもの)、PushはPythonでいうところのAppend
+    //   // Forの使い方
+    //   // https://www.sejuku.net/blog/20777
+    //   resultList.push(dataList[i]);
+    // }
+
+    // console.log(resultList)
+
+
+    
+
+    var map;
+    var marker = [];
+    var infoWindow = [];
+    // var resultList = []
+    // list_dataha
+    // list_dataは文字列型なのでJSON形式に変換
+    // listDataはちなみにこんな感じの中身
+    // 0: {new_latitude: 30.2935421, new_longitude: -97.716}
+    // 1: {new_latitude: 32.4652204, new_longitude: -97.4273195}
+    // 2: {new_latitude: 30.2603535, new_longitude: -97.7145152}
+    var listData = JSON.parse('{{ list_data_for_js|safe }}')
+    // console.log(listData)
+    // for (var i = 0; i < listData.length; i++) {
+    //   console.log(listData[i])
+    // }
+
+    new_latitude_longitude_list = []
+          
+    for (var i = 0; i < listData.length; i++) {
+        // もし、new_latitudeとnew_longitudeがNUllならリストにはいれない
+        if (listData[i].new_latitude === null & listData[i].new_longitude === null) {
+          continue;
+        }
+        new_latitude_longitude_list.push(listData[i])
+    }
+
+    // console.log(new_latitude_longitude_list[0].new_longitude)
+
+    for (var j = 0; j < new_latitude_longitude_list.length; j++) {
+      // ここで変数pにnew_latitude_longitude_listの各インデックス番号を割り当てていき
+      // 入れ込んでいく
+      // final_title = new_latitude_longitude_list[j].new_title
+      final_latitude = new_latitude_longitude_list[j].new_latitude
+      final_longitude = new_latitude_longitude_list[j].new_longitude
+      // console.log(final_title)
+      console.log(final_latitude)
+      console.log(final_longitude)
+
+
+    var markerData = [ // マーカーを立てる場所名・緯度・経度
+        {
+            // name: final_title,
+            lat: final_latitude,
+            lng: final_longitude,     
+      },
+
+      //   {
+      //       name: 'Cherrywood Neighborhood: Canvass for Julie!',
+      //       lat: 30.2935421,
+      //       lng: -97.716,
+      // }, 
+      // {
+      //       name: 'Cleburne: Block-walk for Julie!',
+      //       lat: 32.4652204,
+      //       lng: -97.4273195
+      // }, {
+      //       name: "Canvass for Julie at the Women's March!",
+      //       lat: 30.2603535,
+      //       lng: -97.7145152
+      // }, {
+      //       name: 'Burleson: Block-walk for Julie!',
+      //       lat: 32.5297156,
+      //       lng: -97.286868
+      // }, {
+      //       name: 'Cleburne Canvass!',
+      //       lat: 32.3476438,
+      //       lng: -97.3866837
+      // }, {
+      //       name: 'Akron / Ephrata: Meet Jess King',
+      //       lat: 40.1730632,
+      //       lng: -76.1959315
+      // }, {
+      //       name: 'Manheim Township: Meet Jess King',
+      //       lat: 40.0588134,
+      //       lng: -76.2898618
+      // }, {
+      //       name: 'Lancaster City: Meet Jess King',
+      //       lat: 40.0380781,
+      //       lng: -76.3104021
+      // }, {
+      //       name: 'Hempfield: Meet Jess King',
+      //       lat: 40.0425966,
+      //       lng: -76.426616
+      // }, {
+      //       name: 'Allegheny Get Out the Vote Canvass for Conor Lamb',
+      //       lat: 40.4032685,
+      //       lng: -80.0911561
+      // }, {
+      //       name: 'Moon Get Out the Vote Canvass for Conor Lamb',
+      //       lat: 40.4032685,
+      //       lng: -80.0911561
+      // }, {
+      //       name: 'Pleasant Hills Get Out the Vote Canvass for Conor Lamb',
+      //       lat: 40.3224731,
+      //       lng: -79.9598792
+      // }, {
+      //       name: 'Greene County Get Out the Vote Canvass for Conor Lamb',
+      //       lat: 39.8965726,
+      //       lng: -80.1846561
+      // },
+      ];
+
+    }
+
+    function initMap() {
+    // 地図の作成
+      var mapLatLng = new google.maps.LatLng({lat: markerData[0]['lat'], lng: markerData[0]['lng']}); // 緯度経度のデータ作成
+      map = new google.maps.Map(document.getElementById('sample'), { // #sampleに地図を埋め込む
+        center: mapLatLng, // 地図の中心を指定
+          zoom: 100 // 地図のズームを指定
+      });
+    
+    // マーカー毎の処理
+    for (var i = 0; i < markerData.length; i++) {
+            markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']}); // 緯度経度のデータ作成
+            marker[i] = new google.maps.Marker({ // マーカーの追加
+            position: markerLatLng, // マーカーを立てる位置を指定
+                map: map // マーカーを立てる地図を指定
+          });
+    
+        infoWindow[i] = new google.maps.InfoWindow({ // 吹き出しの追加
+            content: '<div class="sample">' + markerData[i]['name'] + '</div>' // 吹き出しに表示する内容
+          });
+    
+        markerEvent(i); // マーカーにクリックイベントを追加
+    }
+    
+    }
+    
+    // マーカーにクリックイベントを追加
+    function markerEvent(i) {
+        marker[i].addListener('click', function() { // マーカーをクリックしたとき
+          infoWindow[i].open(map, marker[i]); // 吹き出しの表示
+      });
+    }
+    </script>
     <style>
-      #gmap {
+      #sample {
+        width: 100%;
+        height: 500px;
+      }
+      /* #gmap {
           width:100%;
         height:500px;
-      }
+      } */
     </style>
     <title>Mobilize</title>
   </head>
@@ -47,14 +265,20 @@
   {{ 変数.キー }}で取り出せ、HTMLに描画できる -->
   <!-- 参考文献
   https://hiroronn.hatenablog.jp/entry/20181010/1539129686 -->
-  <div id="gmap"></div>
-  {% for list in list_data %}
-  <h1>Id: {{ list.id }}</h1>
-  <h2>Title: {{ list.title }}</h2>
-  <h3>description: {{ list.description }}</h3>
-  <h4>Timezone: {{ list.timezone }}</h4>
-  <h5>Location: {{ list.location }}</h5>
-  <h6>Created_date: {{ list.created_date }}</h6>
+  <!-- 辞書を降っていくときは.で繋げていく。例：list.location.location.longitude -->
+  <!-- <div id="gmap"></div> -->
+  	
+  <div id="sample"></div>
+  {% for list in list_data_for_html %}
+  <h1>Id: {{ list.new_id }}</h1>
+  <h2>Title: {{ list.new_title }}</h2>
+  <h3>description: {{ list.new_description }}</h3>
+  <h4>Timezone: {{ list.new_timezone }}</h4>
+  <!-- <h5>Location Latitude: {{ list.location.location.latitude }}</h5>
+  <h5>Location Longitude: {{ list.location.location.longitude }}</h5> -->
+  <h5>Location Latitude: {{ list.new_latitude }}</h5>
+  <h5>Location Longitude: {{ list.new_longitude }}</h5>
+  <h6>Created_date: {{ list.new_created_date }}</h6>
   {% endfor %}
 
 
