--- a/event_list/static/css/main.css
+++ b/event_list/static/css/main.css
@@ -1,4 +1,4 @@
-/* Mapについて */
+/* About Map */
 #sample {
   width: 100%;
   height: 500px;
@@ -6,6 +6,7 @@
   border: 1px gray solid;
 }
 
+/* About Whole layout */
 p {
   font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
   color: gray;
@@ -46,4 +47,13 @@ body {
   margin: 20px 0px 20px 0px;
   border-radius: 8px;
   padding-left: 10px;
+}
+
+/* About FontAwesome */
+.fontawesome-icon {
+  text-align: center;
+}
+
+.size{
+  font-size:1.5em; /*size x 1.5*/
 }
