delete unnecessary comment and chnage japanese comment to english

--- a/event_list/static/css/main.css
+++ b/event_list/static/css/main.css
@@ -49,7 +49,7 @@ body {
   padding-left: 10px;
 }
 
-/* About FontAwesome */
+/* About Pagination FontAwesome */
 .fontawesome-icon {
   text-align: center;
 }
