--- a/event_list/templates/index.html
+++ b/event_list/templates/index.html
@@ -1,275 +1,99 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Road CSS -->
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Google Map -->
-    <!-- 参考資料
+  <!-- Load CSS -->
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Google Map -->
+  <!-- reference
     https://qiita.com/Haruka-Ogawa/items/997401a2edcd20e61037 -->
-    <!-- https://www.itti.jp/web-design/how-to-display-a-map-using-google-map-api/ -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCleE-Z2qlfSDbIJWFRKA8susZPY44Vv3o&callback=initMap" async></script>
+  <!-- https://www.itti.jp/web-design/how-to-display-a-map-using-google-map-api/ -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCleE-Z2qlfSDbIJWFRKA8susZPY44Vv3o&callback=initMap"
+    async></script>
+  <!-- Fontawesome_for_NEXT&Previous_Button -->
+  <script src="https://kit.fontawesome.com/cc7e134709.js" crossorigin="anonymous"></script>
 
-    <!-- Fontawesome_for_NEXT&Previous_Button -->
-    <script src="https://kit.fontawesome.com/cc7e134709.js" crossorigin="anonymous"></script>
-    <!-- <script>
-      function initMap() {
-        var mapPosition = new google.maps.LatLng( 1,1 );//緯度経度
-        var map = new google.maps.Map(document.getElementById('gmap'), {
-        zoom: 17,//ズーム
-        center: mapPosition
-      });
-        var marker = new google.maps.Marker({
-        position: mapPosition,
-        map: map
-        });
-      }
-    </script> -->
-    <!-- Google map 実装
-    参考資料
-    https://www.tam-tam.co.jp/tipsnote/javascript/post7755.html -->
-    <script>
-    //     let dataList = [
-    //     {
-    //         name: 'Cherrywood Neighborhood: Canvass for Julie!',
-    //         lat: 30.2935421,
-    //         lng: -97.716,
-    //     }, {
-    //             name: 'Cleburne: Block-walk for Julie!',
-    //             lat: 32.4652204,
-    //             lng: -97.4273195
-    //     }, {
-    //             name: "Canvass for Julie at the Women's March!",
-    //             lat: 30.2603535,
-    //             lng: -97.7145152
-    //     }, {
-    //             name: 'Burleson: Block-walk for Julie!',
-    //             lat: 32.5297156,
-    //             lng: -97.286868
-    //     }, {
-    //             name: 'Cleburne Canvass!',
-    //             lat: 32.3476438,
-    //             lng: -97.3866837
-    //     }, {
-    //             name: 'Akron / Ephrata: Meet Jess King',
-    //             lat: 40.1730632,
-    //             lng: -76.1959315
-    //     }, {
-    //             name: 'Manheim Township: Meet Jess King',
-    //             lat: 40.0588134,
-    //             lng: -76.2898618
-    //     }, {
-    //             name: 'Lancaster City: Meet Jess King',
-    //             lat: 40.0380781,
-    //             lng: -76.3104021
-    //     }, {
-    //             name: 'Hempfield: Meet Jess King',
-    //             lat: 40.0425966,
-    //             lng: -76.426616
-    //     }, {
-    //             name: 'Allegheny Get Out the Vote Canvass for Conor Lamb',
-    //             lat: 40.4032685,
-    //             lng: -80.0911561
-    //     }, {
-    //             name: 'Moon Get Out the Vote Canvass for Conor Lamb',
-    //             lat: 40.4032685,
-    //             lng: -80.0911561
-    //     }, {
-    //             name: 'Pleasant Hills Get Out the Vote Canvass for Conor Lamb',
-    //             lat: 40.3224731,
-    //             lng: -79.9598792
-    //     }, {
-    //             name: 'Greene County Get Out the Vote Canvass for Conor Lamb',
-    //             lat: 39.8965726,
-    //             lng: -80.1846561
-    //     },
-    //     ]
-
-    //     // console.log(dataList)
-        
-
-    // // resultListというリストを定義したうえで    
-    // var resultList = []
-    // // dataListをfor文でまわし
-    // for (let i = 1; i < dataList.length; i++){
-    //   // resultListに格納
-    //   // 追加したい場所.push(追加したいもの)、PushはPythonでいうところのAppend
-    //   // Forの使い方
-    //   // https://www.sejuku.net/blog/20777
-    //   resultList.push(dataList[i]);
-    // }
-
-    // console.log(resultList)
-
-
-    
-
+  <script>
     var map;
     var marker = [];
     var infoWindow = [];
-    // var resultList = []
-    // list_dataha
-    // list_dataは文字列型なのでJSON形式に変換
-    // listDataはちなみにこんな感じの中身
-    // 0: {new_latitude: 30.2935421, new_longitude: -97.716}
-    // 1: {new_latitude: 32.4652204, new_longitude: -97.4273195}
-    // 2: {new_latitude: 30.2603535, new_longitude: -97.7145152}
     var listData = JSON.parse('{{ list_data_for_js|safe }}')
 
 
     new_latitude_longitude_list = []
-          
-    for (var i = 0; i < listData.length; i++) {
-        // もし、new_latitudeとnew_longitudeがNUllならリストにはいれない
-        if (listData[i].new_latitude === null & listData[i].new_longitude === null) {
-          continue;
-        }
-        new_latitude_longitude_list.push(listData[i])
-    }
 
-    console.log(new_latitude_longitude_list.length)
+    for (var i = 0; i < listData.length; i++) {
+      // If new_latitude and new_longitude are NUll, they can't be on the list
+      if (listData[i].new_latitude === null & listData[i].new_longitude === null) {
+        continue;
+      }
+      new_latitude_longitude_list.push(listData[i])
+    }
 
     var markerData = []
     for (var j = 0; j < new_latitude_longitude_list.length; j++) {
-      // ここで変数final_latitude、final_longitudeにnew_latitude_longitude_listの各インデックス番号を割り当てていき
-      // 入れ込んでいく
+      // Here, assign each index number of new_latitude_longitude_list to the variables final_latitude and final_longitude.
       final_title = new_latitude_longitude_list[j].new_title
       final_latitude = new_latitude_longitude_list[j].new_latitude
       final_longitude = new_latitude_longitude_list[j].new_longitude
 
-      // ここでnew_dというリストをつくり、
-       new_d = {
-            // name: String(final_latitude)+'&'+String(final_longitude),
-            name: final_title,
-            lat: final_latitude,
-            lng: final_longitude,     
+      // make the list "new_d" here、
+      new_d = {
+        name: final_title,
+        lat: final_latitude,
+        lng: final_longitude,
       }
-      // markerDataというリストにPushしていく
+      // Push new_d to the list "markerData"
       markerData.push(new_d)
-    }  
-    
-    // var markerData = [ // マーカーを立てる場所名・緯度・経度
+    }
 
-
-      //   {
-      //       name: 'Cherrywood Neighborhood: Canvass for Julie!',
-      //       lat: 30.2935421,
-      //       lng: -97.716,
-      // }, 
-      // {
-      //       name: 'Cleburne: Block-walk for Julie!',
-      //       lat: 32.4652204,
-      //       lng: -97.4273195
-      // }, {
-      //       name: "Canvass for Julie at the Women's March!",
-      //       lat: 30.2603535,
-      //       lng: -97.7145152
-      // }, {
-      //       name: 'Burleson: Block-walk for Julie!',
-      //       lat: 32.5297156,
-      //       lng: -97.286868
-      // }, {
-      //       name: 'Cleburne Canvass!',
-      //       lat: 32.3476438,
-      //       lng: -97.3866837
-      // }, {
-      //       name: 'Akron / Ephrata: Meet Jess King',
-      //       lat: 40.1730632,
-      //       lng: -76.1959315
-      // }, {
-      //       name: 'Manheim Township: Meet Jess King',
-      //       lat: 40.0588134,
-      //       lng: -76.2898618
-      // }, {
-      //       name: 'Lancaster City: Meet Jess King',
-      //       lat: 40.0380781,
-      //       lng: -76.3104021
-      // }, {
-      //       name: 'Hempfield: Meet Jess King',
-      //       lat: 40.0425966,
-      //       lng: -76.426616
-      // }, {
-      //       name: 'Allegheny Get Out the Vote Canvass for Conor Lamb',
-      //       lat: 40.4032685,
-      //       lng: -80.0911561
-      // }, {
-      //       name: 'Moon Get Out the Vote Canvass for Conor Lamb',
-      //       lat: 40.4032685,
-      //       lng: -80.0911561
-      // }, {
-      //       name: 'Pleasant Hills Get Out the Vote Canvass for Conor Lamb',
-      //       lat: 40.3224731,
-      //       lng: -79.9598792
-      // }, {
-      //       name: 'Greene County Get Out the Vote Canvass for Conor Lamb',
-      //       lat: 39.8965726,
-      //       lng: -80.1846561
-      // },
-      // ];
-      
-
-  
     function initMap() {
-    // 地図の作成
-      var mapLatLng = new google.maps.LatLng({lat: markerData[0]['lat'], lng: markerData[0]['lng']}); // 緯度経度のデータ作成
-      map = new google.maps.Map(document.getElementById('sample'), { // #sampleに地図を埋め込む
-        center: mapLatLng, // 地図の中心を指定
-          zoom: 100 // 地図のズームを指定
+      // Create Map
+      var mapLatLng = new google.maps.LatLng({ lat: markerData[0]['lat'], lng: markerData[0]['lng'] }); // Latitude / longitude data creation
+      map = new google.maps.Map(document.getElementById('sample'), { // Embed map in #sample
+        center: mapLatLng, // Specify the center of the map
+        zoom: 100 // Specify map zoom
       });
-    
-    // マーカー毎の処理
-    for (var i = 0; i < markerData.length; i++) {
-            markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']}); // 緯度経度のデータ作成
-            marker[i] = new google.maps.Marker({ // マーカーの追加
-            position: markerLatLng, // マーカーを立てる位置を指定
-                map: map // マーカーを立てる地図を指定
-          });
-    
-        infoWindow[i] = new google.maps.InfoWindow({ // 吹き出しの追加
-            content: '<div class="sample">' + markerData[i]['name'] + '</div>' // 吹き出しに表示する内容
-          });
-    
-        markerEvent(i); // マーカーにクリックイベントを追加
-    }
-    
+
+      // Processing for each marker
+      for (var i = 0; i < markerData.length; i++) {
+        markerLatLng = new google.maps.LatLng({ lat: markerData[i]['lat'], lng: markerData[i]['lng'] }); // atitude / longitude data 
+        marker[i] = new google.maps.Marker({ // Add marker
+          position: markerLatLng, // Specify the position to put the marker
+          map: map // Specify a map to set a marker
+        });
+
+        infoWindow[i] = new google.maps.InfoWindow({ // Add a callout
+          content: '<div class="sample">' + markerData[i]['name'] + '</div>' // Contents to be displayed in the balloon
+        });
+
+        markerEvent(i); // Add click event to marker
+      }
+
     }
 
-    // マーカーにクリックイベントを追加
+    // Add click event to marker
     function markerEvent(i) {
-        marker[i].addListener('click', function() { // マーカーをクリックしたとき
-          infoWindow[i].open(map, marker[i]); // 吹き出しの表示
+      marker[i].addListener('click', function () { // When you click the maker
+        infoWindow[i].open(map, marker[i]); // Display of balloons
       });
     }
     console.log(markerData)
 
-    </script>
-    <style>
+  </script>
+  <style>
+  </style>
+  <title>Mobilize</title>
+</head>
 
+<body>
 
-      /* #gmap {
-          width:100%;
-        height:500px;
-      } */
-    </style>
-    <title>Mobilize</title>
-  </head>
-  <body>
-  <!-- list_dataはリスト型でその中に辞書が内包されている
-  その辞書を取り出すには下記のようなForループで取り出す
-  参考文献
-  https://opendata-web.site/blog/entry/18/ -->
-  <!-- そして、辞書から取り出すにはKeyを指定してそのValueを抽出するには
-  {{ 変数.キー }}で取り出せ、HTMLに描画できる -->
-  <!-- 参考文献
-  https://hiroronn.hatenablog.jp/entry/20181010/1539129686 -->
-  <!-- 辞書を降っていくときは.で繋げていく。例：list.location.location.longitude -->
-  <!-- <div id="gmap"></div> -->
-  	
   <div id="sample"></div>
   {% for list in list_data_for_html %}
   <div class="each_event">
@@ -278,21 +102,16 @@
     <h3>Description: {{ list.new_description }}</h3>
     <h4>Created_date: {{ list.new_created_date }}</h4>
     <h6>Timezone: {{ list.new_timezone }}</h6>
-    <!-- <h5>Location Latitude: {{ list.location.location.latitude }}</h5>
-    <h5>Location Longitude: {{ list.location.location.longitude }}</h5> -->
-    <!-- <h5>Location Latitude: {{ list.new_latitude }}</h5> -->
-    <!-- <h5>Location Longitude: {{ list.new_longitude }}</h5> -->
   </div>
 
   {% endfor %}
-<!-- Pagination -->
+  <!-- Pagination -->
   <!-- Fontawesome、Arrow_Icon -->
-  <!-- それぞれのボタンにクエリパラメーターを設置
+  <!-- Set query parameters for each button
+  reference
   https://utamaro.hatenablog.jp/entry/2018/10/21/102148 -->
   <div class="fontawesome-icon">
     <a class="fas fa-arrow-circle-left" href="{% url 'index' %}{{ url_previous_querry_parameter }}"></a>
     <a class="fas fa-arrow-circle-right" href="{% url 'index' %}{{ url_next_querry_parameter }}"></a>
   </div>
-  
-
 </body>
