--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,30 +1,59 @@
+/* About Map */
+#sample {
+  width: 100%;
+  height: 500px;
+  border-radius: 8px;
+  border: 1px gray solid;
+}
+
+/* About Whole layout */
 p {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 
 h1 {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 h2 {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 h3 {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 h4 {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 h5 {
-  font-family: 'Comic Sans MS', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
+  color: gray;
+}
+h6 {
+  font-family: "Comic Sans MS", "Arial Narrow", Arial, sans-serif;
   color: gray;
 }
 
 body {
-  background-color: #8504ff;
+  background-color: beige;
 }
 
+.each_event {
+  border: 1px gray solid;
+  background-color: white;
+  margin: 20px 0px 20px 0px;
+  border-radius: 8px;
+  padding-left: 10px;
+}
+
+/* About FontAwesome */
+.fontawesome-icon {
+  text-align: center;
+}
+
+.size {
+  font-size: 1.5em; /*size x 1.5*/
+}
