--- a/event_list/templates/index.html
+++ b/event_list/templates/index.html
@@ -110,7 +110,11 @@
   reference
   https://utamaro.hatenablog.jp/entry/2018/10/21/102148 -->
   <div class="fontawesome-icon">
+    {% if url_previous_querry_parameter %}
     <a class="fas fa-arrow-circle-left" href="{% url 'index' %}{{ url_previous_querry_parameter }}"></a>
+    {% endif %}
+    {% if url_next_querry_parameter %}
     <a class="fas fa-arrow-circle-right" href="{% url 'index' %}{{ url_next_querry_parameter }}"></a>
+    {% endif %}
   </div>
 </body>
